hphp/test/zend/good/ext-gd/bug39082.php
<?php
$im = imagecreatetruecolor(1,1);
imagegif($im);
?>