hphp/test/zend/bad/ext/sockets/tests/socket_create_listen-wrongparams.php
<?php
$sock1 = socket_create_listen(array());
$sock2 = socket_create_listen(31337, array());